--- a/project-01/css/style.css
+++ b/project-01/css/style.css
@@ -5,7 +5,7 @@
 }
 body{
 	font-family: tahoma;
-	background: #d4d4d4;
+	background: #efefef;
 }
 .container{
 	width: 80%;
@@ -30,21 +30,21 @@ body{
 }
 .menu-area{
 	float: right;
-	outline: 3px solid #333;
-	margin-top: 38px; 
+	margin-top: 25px; 
+	outline: 3px solid #000;
 }
 .menu-area ul{
 	list-style-type: none;
-	padding: 0 20px; 
+    padding: 0px 25px;
+    line-height: 3;
 	
 }
 .menu-area ul li{
 	float: left;
-
 }	
 .menu-area ul li a{
 	text-decoration: none;
-	margin-right: 8px; 
+	margin-right: 8px;
 }
 .menu-area ul li a:hover{
 	text-decoration: underline;
@@ -61,6 +61,11 @@ body{
 	border-bottom: 3px solid #000;
 }
 /* content-area */
+section:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .content-area{
 	width: 900px;
 	height: 360px;
@@ -132,7 +137,7 @@ body{
 .footer-area{
 	padding: 15px;
 	border: 3px solid #000;
-	margin-top: 380px;
+	margin-top: 5px;
 	margin-bottom: 5px; 
 	text-align: center;  
 }
